fix (workaround) Mozilla backface visibility bug

--- a/includes/css/style.less
+++ b/includes/css/style.less
@@ -466,6 +466,8 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#26ffffff', e
 		   -moz-transform-style: preserve-3d;
 		     -o-transform-style: preserve-3d;
 		        transform-style: preserve-3d;
+		        
+		-moz-backface-visibility: hidden; // firefox backface visibility bug hotfix
 	  
 		& > figure {
 			display: block;
